Swagger Correction 2: Project 1 Lesson 6
